Fixed horizontal scrolling

--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,6 @@ html, body {
     grid-template-columns: 1fr 5fr;
     grid-template-rows: 1fr 2fr 10fr;
     height: 100vh;
-    width: 100vw;
 }
 
 
